FIX#88 select with SHIFT+Arrow keys

--- a/src/_select_svelte.scss
+++ b/src/_select_svelte.scss
@@ -148,7 +148,7 @@ $ss-text-muted: $text-muted !default;
 .ss-result {
   position: relative;
 
-  max-height: 35vh;
+  max-height: 40vh;
   overflow-y: auto;
   overscroll-behavior: contain;
 }
